# WB_logistics

./: .env.example  .gitignore  Dockerfile  None  README.md  pyproject.toml
app/: api_data_processor.py  api_monitor.py  bot.py  config.py  db.py  dto.py  main.py  messages.yaml
app/db/: base.sqlite  db.py
app/handlers/: base.py  supply.py
app/keyboards/: keyboards.py
app/utils/messages/: messages.py  messages.yaml
